force-app/main/default/objects/Camp_Lejeune__c/fields/Affirmation_of_Exclusive_Representation__c.field-meta.xml
<CustomField>
    <fullName>Affirmation_of_Exclusive_Representation__c</fullName>
    <description>Are you willing to affirm, under penalty, that you have not sought legal representation or advice from  any other law firm or attorney for this specific matter?</description>
    <inlineHelpText>Are you willing to affirm, under penalty, that you have not sought legal representation or advice from  any other law firm or attorney for this specific matter?</inlineHelpText>
    <label>Affirmation of Exclusive Representation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>