force-app/main/default/objects/Camp_Lejeune__c/fields/Agency_or_Employer__c.field-meta.xml
<CustomField>
    <fullName>Agency_or_Employer__c</fullName>
    <inlineHelpText>What agency/employer are/were you with?</inlineHelpText>
    <label>Agency or Employer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>