force-app/main/default/objects/Camp_Lejeune__c/fields/ALS_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>ALS_Diagnosis_Date__c</fullName>
    <label>ALS Diagnosis Date</label>
    <type>Date</type>
</CustomField>