force-app/main/default/objects/Camp_Lejeune__c/fields/Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Phone__c</fullName>
    <inlineHelpText>Is there an alternate phone number we may contact you?</inlineHelpText>
    <label>Alternate Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>