force-app/main/default/objects/Camp_Lejeune__c/fields/Aplastic_Anemia_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Aplastic_Anemia_Diagnosis_Date__c</fullName>
    <label>Aplastic_Anemia Diagnosis Date</label>
    <type>Date</type>
</CustomField>