force-app/main/default/objects/Camp_Lejeune__c/fields/Autoimmune_Disease_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Autoimmune_Disease_Diagnosis_Date__c</fullName>
    <label>Autoimmune Disease Diagnosis Date</label>
    <type>Date</type>
</CustomField>