force-app/main/default/objects/Camp_Lejeune__c/fields/Best_Time_to_Reach__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Reach__c</fullName>
    <label>Best Time to Reach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>