force-app/main/default/objects/Camp_Lejeune__c/fields/Bile_Duct_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Bile_Duct_Cancer_Diagnosis_Date__c</fullName>
    <label>Bile Duct Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>