force-app/main/default/objects/Camp_Lejeune__c/fields/Brain_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Brain_Cancer_Diagnosis_Date__c</fullName>
    <label>Brain Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>