force-app/main/default/objects/Camp_Lejeune__c/fields/Breast_Cancer_Male_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Breast_Cancer_Male_Diagnosis_Date__c</fullName>
    <label>Breast Cancer (Male) Diagnosis Date</label>
    <type>Date</type>
</CustomField>