force-app/main/default/objects/Camp_Lejeune__c/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <label>Call Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>