force-app/main/default/objects/Camp_Lejeune__c/fields/Callback_Number__c.field-meta.xml
<CustomField>
    <fullName>Callback_Number__c</fullName>
    <label>Callback Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>