force-app/main/default/objects/Camp_Lejeune__c/fields/Caller_Has_Authority_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>Caller_Has_Authority_to_Sign__c</fullName>
    <label>Caller Has Authority to Sign?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Executor of estate</fullName>
            </value>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>NOK</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Guardianship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>