force-app/main/default/objects/Camp_Lejeune__c/fields/Camp_Lejeune_Residence_Work_History__c.field-meta.xml
<CustomField>
    <fullName>Camp_Lejeune_Residence_Work_History__c</fullName>
    <description>Did you/they live or work at Camp Lejuene for a period of 30 days or more, sometime between August  1,1953 and December 31, 1987?</description>
    <inlineHelpText>Did you/they live or work at Camp Lejuene for a period of 30 days or more, sometime between August  1,1953 and December 31, 1987?</inlineHelpText>
    <label>Camp Lejeune Residence/Work History</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>