force-app/main/default/objects/Camp_Lejeune__c/fields/Cardiac_Defect_Occurred_at_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Defect_Occurred_at_Camp_Lejeune__c</fullName>
    <label>Cardiac Defect Occurred at Camp Lejeune</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>