force-app/main/default/objects/Camp_Lejeune__c/fields/Cause_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_Of_Death__c</fullName>
    <label>Cause Of Death</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>