force-app/main/default/objects/Camp_Lejeune__c/fields/Cervical_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Cervical_Cancer_Diagnosis_Date__c</fullName>
    <label>Cervical Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>