force-app/main/default/objects/Camp_Lejeune__c/fields/Client_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Client_Date_Of_Birth__c</fullName>
    <label>Client Date Of Birth</label>
    <type>Date</type>
</CustomField>