force-app/main/default/objects/Camp_Lejeune__c/fields/Client_Gender__c.field-meta.xml
<CustomField>
    <fullName>Client_Gender__c</fullName>
    <label>Client Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>