force-app/main/default/objects/Camp_Lejeune__c/fields/Client_Presence_At_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Client_Presence_At_Camp_Lejeune__c</fullName>
    <inlineHelpText>Why was the client at Camp Lejeune between August 1, 1953, and December 31, 1987?</inlineHelpText>
    <label>Client Presence At Camp Lejeune</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Member</fullName>
            </value>
            <value>
                <fullName>Service Member Dependent (including in utero)</fullName>
            </value>
            <value>
                <fullName>Civilian/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>