force-app/main/default/objects/Camp_Lejeune__c/fields/Co_Living_Emergency_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Co_Living_Emergency_Contact_Phone__c</fullName>
    <label>Co-Living Emergency Contact Phone</label>
    <type>Phone</type>
</CustomField>