force-app/main/default/objects/Camp_Lejeune__c/fields/Co_Living_Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Co_Living_Emergency_Contact_Relationship__c</fullName>
    <label>Co-Living Emergency Contact Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>