force-app/main/default/objects/Camp_Lejeune__c/fields/Colon_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Colon_Cancer_Diagnosis_Date__c</fullName>
    <label>Colon Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>