force-app/main/default/objects/Camp_Lejeune__c/fields/Congenital_Cardiac_Defect_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Congenital_Cardiac_Defect_Diagnosis_Date__c</fullName>
    <label>Congenital Cardiac Defect Diagnosis Date</label>
    <type>Date</type>
</CustomField>