force-app/main/default/objects/Camp_Lejeune__c/fields/Consulted_Attorney_Previously__c.field-meta.xml
<CustomField>
    <fullName>Consulted_Attorney_Previously__c</fullName>
    <inlineHelpText>Have you previously consulted an attorney for this claim?</inlineHelpText>
    <label>Consulted Attorney Previously</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>