force-app/main/default/objects/Camp_Lejeune__c/fields/Court_And_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Court_And_Case_Number__c</fullName>
    <inlineHelpText>Please provide the name of the court and the case number, if known:</inlineHelpText>
    <label>Court And Case Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>