force-app/main/default/objects/Camp_Lejeune__c/fields/Currently_Represented_by_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Currently_Represented_by_Attorney__c</fullName>
    <label>Currently Represented by Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>