force-app/main/default/objects/Camp_Lejeune__c/fields/Currently_Taking_Medication__c.field-meta.xml
<CustomField>
    <fullName>Currently_Taking_Medication__c</fullName>
    <label>Currently Taking Medication?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>