force-app/main/default/objects/Camp_Lejeune__c/fields/Date_Of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Passing__c</fullName>
    <inlineHelpText>When did your loved one pass away?</inlineHelpText>
    <label>Date Of Passing</label>
    <type>Date</type>
</CustomField>