force-app/main/default/objects/Camp_Lejeune__c/fields/Dates_of_Diagnosis_for_Each_Condition__c.field-meta.xml
<CustomField>
    <fullName>Dates_of_Diagnosis_for_Each_Condition__c</fullName>
    <description>Please list the date of Dx for each Cancer or medical condition you&apos;ve received a formal Dx for</description>
    <inlineHelpText>Please list the date of Dx for each Cancer or medical condition you&apos;ve received a formal Dx for</inlineHelpText>
    <label>Dates of Diagnosis for Each Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>