force-app/main/default/objects/Camp_Lejeune__c/fields/Death_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate__c</fullName>
    <inlineHelpText>Do you have a copy of the death certificate?</inlineHelpText>
    <label>Death Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>