force-app/main/default/objects/Camp_Lejeune__c/fields/Diagnosed_After_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_After_Camp_Lejeune__c</fullName>
    <inlineHelpText>Have you been diagnosed with any of the following after living or working at Camp Lejeune?</inlineHelpText>
    <label>Diagnosed After Camp Lejeune</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute Myeloid Leukemia (AML)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>