force-app/main/default/objects/Camp_Lejeune__c/fields/Diagnosing_Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Diagnosing_Doctor_Name__c</fullName>
    <label>Diagnosing Doctor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>