force-app/main/default/objects/Camp_Lejeune__c/fields/Doctors_and_Specialties__c.field-meta.xml
<CustomField>
    <fullName>Doctors_and_Specialties__c</fullName>
    <description>Please list all the Dx doctors and treating doctors names and specialities</description>
    <inlineHelpText>Please list all the Dx doctors and treating doctors names and specialities</inlineHelpText>
    <label>Doctors and Specialties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>