force-app/main/default/objects/Camp_Lejeune__c/fields/Esophageal_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Esophageal_Cancer_Diagnosis_Date__c</fullName>
    <label>Esophageal Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>