force-app/main/default/objects/Camp_Lejeune__c/fields/Executor_Administrator_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Executor_Administrator_Trustee__c</fullName>
    <inlineHelpText>Are you the executor, administrator, or trustee of the Injured Person’s estate?</inlineHelpText>
    <label>Executor Administrator Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>