force-app/main/default/objects/Camp_Lejeune__c/fields/Executor_Name__c.field-meta.xml
<CustomField>
    <fullName>Executor_Name__c</fullName>
    <inlineHelpText>Who is the executor, administrator, or trustee of the Injured Person’s estate?</inlineHelpText>
    <label>Executor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>