force-app/main/default/objects/Camp_Lejeune__c/fields/Executor_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Executor_Relationship__c</fullName>
    <inlineHelpText>What is that person’s relationship to the Injured Person?</inlineHelpText>
    <label>Executor Relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>