force-app/main/default/objects/Camp_Lejeune__c/fields/Executor_Relationship_To_You__c.field-meta.xml
<CustomField>
    <fullName>Executor_Relationship_To_You__c</fullName>
    <inlineHelpText>What is that person’s relationship to you?</inlineHelpText>
    <label>Executor Relationship To You</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>