force-app/main/default/objects/Camp_Lejeune__c/fields/Explain_Client_Presence__c.field-meta.xml
<CustomField>
    <fullName>Explain_Client_Presence__c</fullName>
    <label>Explain Client Presence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>