force-app/main/default/objects/Camp_Lejeune__c/fields/Exposure_Method__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Method__c</fullName>
    <inlineHelpText>How were you exposed to contaminated water?</inlineHelpText>
    <label>Exposure Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drinking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>