force-app/main/default/objects/Camp_Lejeune__c/fields/Exposure_To_Contaminated_Water__c.field-meta.xml
<CustomField>
    <fullName>Exposure_To_Contaminated_Water__c</fullName>
    <inlineHelpText>Were you exposed to contaminated drinking water at Camp Lejeune for 30 or more days between August 1, 1953, and December 31, 1987?</inlineHelpText>
    <label>Exposure To Contaminated Water</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>