force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Address_4__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_4__c</fullName>
    <label>Facility Address 4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>