force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <label>Facility Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>