force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Address_Address2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address_Address2__c</fullName>
    <label>Facility Address (Address2)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>