force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Name_for_Miscarriage_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_for_Miscarriage_Treatment__c</fullName>
    <label>Facility Name for Miscarriage Treatment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>