force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Phone_Number_4__c.field-meta.xml
<CustomField>
    <fullName>Facility_Phone_Number_4__c</fullName>
    <label>Facility Phone Number 4</label>
    <type>Phone</type>
</CustomField>