force-app/main/default/objects/Camp_Lejeune__c/fields/Facility_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Phone_Number__c</fullName>
    <label>Facility Phone Number</label>
    <type>Phone</type>
</CustomField>