force-app/main/default/objects/Camp_Lejeune__c/fields/Fiduciary_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Contact_Relationship__c</fullName>
    <label>Fiduciary Contact Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>