force-app/main/default/objects/Camp_Lejeune__c/fields/Fiduciary_Name__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Name__c</fullName>
    <label>Fiduciary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>