force-app/main/default/objects/Camp_Lejeune__c/fields/Fiduciary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Fiduciary_Phone__c</fullName>
    <label>Fiduciary Phone</label>
    <type>Phone</type>
</CustomField>