force-app/main/default/objects/Camp_Lejeune__c/fields/First_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Exposure_Date__c</fullName>
    <inlineHelpText>When were you first exposed to contaminated water at Camp Lejeune?</inlineHelpText>
    <label>First Exposure Date</label>
    <type>Date</type>
</CustomField>