force-app/main/default/objects/Camp_Lejeune__c/fields/Had_Surgeries__c.field-meta.xml
<CustomField>
    <fullName>Had_Surgeries__c</fullName>
    <inlineHelpText>Have you had any surgeries as a result of this diagnosis?</inlineHelpText>
    <label>Had Surgeries?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>