force-app/main/default/objects/Camp_Lejeune__c/fields/Have_an_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Have_an_Emergency_Contact__c</fullName>
    <inlineHelpText>In case we are unable to reach you, do you have an emergency contact?</inlineHelpText>
    <label>Have an Emergency Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>