force-app/main/default/objects/Camp_Lejeune__c/fields/Have_Camp_Lejeune_Documents__c.field-meta.xml
<CustomField>
    <fullName>Have_Camp_Lejeune_Documents__c</fullName>
    <label>Have Camp Lejeune Documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>