force-app/main/default/objects/Camp_Lejeune__c/fields/Hodgkin_s_Disease_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Hodgkin_s_Disease_Diagnosis_Date__c</fullName>
    <label>Hodgkin&apos;s Disease Diagnosis Date</label>
    <type>Date</type>
</CustomField>