force-app/main/default/objects/Camp_Lejeune__c/fields/Hypersensitivity_Skin_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Hypersensitivity_Skin_Diagnosis_Date__c</fullName>
    <label>Hypersensitivity Skin Diagnosis Date</label>
    <type>Date</type>
</CustomField>