force-app/main/default/objects/Camp_Lejeune__c/fields/In_Contact_With_Executor__c.field-meta.xml
<CustomField>
    <fullName>In_Contact_With_Executor__c</fullName>
    <inlineHelpText>Have you been in contact with that person regarding this claim for damages stemming from the Injured Person’s exposure to water at Camp Lejeune?</inlineHelpText>
    <label>In Contact With Executor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>