force-app/main/default/objects/Camp_Lejeune__c/fields/In_Utero_At_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>In_Utero_At_Camp_Lejeune__c</fullName>
    <inlineHelpText>Were you in-utero while at Camp Lejeune?</inlineHelpText>
    <label>In Utero At Camp Lejeune</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>