force-app/main/default/objects/Camp_Lejeune__c/fields/Infertility_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Infertility_Diagnosis_Date__c</fullName>
    <label>Infertility Diagnosis Date</label>
    <type>Date</type>
</CustomField>