force-app/main/default/objects/Camp_Lejeune__c/fields/Injured_Party_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_Affiliation__c</fullName>
    <label>Injured Party Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Military Veteran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>