force-app/main/default/objects/Camp_Lejeune__c/fields/Is_Person_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Deceased__c</fullName>
    <label>Is Person Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>