force-app/main/default/objects/Camp_Lejeune__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <inlineHelpText>What is/was your job?</inlineHelpText>
    <label>Job Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>