force-app/main/default/objects/Camp_Lejeune__c/fields/Kidney_Disease_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Kidney_Disease_Diagnosis_Date__c</fullName>
    <label>Kidney Disease Diagnosis Date</label>
    <type>Date</type>
</CustomField>