force-app/main/default/objects/Camp_Lejeune__c/fields/Know_Next_Of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Know_Next_Of_Kin__c</fullName>
    <description>Do you know who the next of kin is?</description>
    <inlineHelpText>Do you know who the next of kin is?</inlineHelpText>
    <label>Know Next Of Kin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>