force-app/main/default/objects/Camp_Lejeune__c/fields/Laryngeal_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Laryngeal_Cancer_Diagnosis_Date__c</fullName>
    <label>Laryngeal Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>