force-app/main/default/objects/Camp_Lejeune__c/fields/Last_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Exposure_Date__c</fullName>
    <inlineHelpText>When were you last exposed to contaminated water at Camp Lejeune?</inlineHelpText>
    <label>Last Exposure Date</label>
    <type>Date</type>
</CustomField>