force-app/main/default/objects/Camp_Lejeune__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Camp Lejeune</relationshipLabel>
    <relationshipName>Camp_Lejeune</relationshipName>
    <type>Lookup</type>
</CustomField>