force-app/main/default/objects/Camp_Lejeune__c/fields/Leukemia_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Leukemia_Diagnosis_Date__c</fullName>
    <label>Leukemia Diagnosis Date</label>
    <type>Date</type>
</CustomField>