force-app/main/default/objects/Camp_Lejeune__c/fields/Liver_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Liver_Cancer_Diagnosis_Date__c</fullName>
    <label>Liver Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>