force-app/main/default/objects/Camp_Lejeune__c/fields/Location_At_Camp_Lejeune__c.field-meta.xml
<CustomField>
    <fullName>Location_At_Camp_Lejeune__c</fullName>
    <inlineHelpText>Where did you live or work while at Camp Lejeune:</inlineHelpText>
    <label>Location At Camp Lejeune</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Barracks</fullName>
            </value>
            <value>
                <fullName>Montford Point/Camp Johnson</fullName>
            </value>
            <value>
                <fullName>Paradise Point</fullName>
            </value>
            <value>
                <fullName>Courthouse Bay</fullName>
            </value>
            <value>
                <fullName>Watkins Village</fullName>
            </value>
            <value>
                <fullName>Midway Park</fullName>
            </value>
            <value>
                <fullName>Knox Trailer Park</fullName>
            </value>
            <value>
                <fullName>New River</fullName>
            </value>
            <value>
                <fullName>Onslow Beach</fullName>
            </value>
            <value>
                <fullName>French Creek</fullName>
            </value>
            <value>
                <fullName>Tarawa Terrace</fullName>
            </value>
            <value>
                <fullName>Berkeley Manor</fullName>
            </value>
            <value>
                <fullName>Camp Geiger</fullName>
            </value>
            <value>
                <fullName>Mainside Barracks</fullName>
            </value>
            <value>
                <fullName>Hospital Point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>