force-app/main/default/objects/Camp_Lejeune__c/fields/Location_of_Miscarriage_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Miscarriage_Treatment__c</fullName>
    <inlineHelpText>Agent Facing Question Is the facility where the miscarriage was treated on Camp Lejeune or in Jacksonville, North Carolina?</inlineHelpText>
    <label>Location of Miscarriage Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>