force-app/main/default/objects/Camp_Lejeune__c/fields/Low_Sperm_Count_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Low_Sperm_Count_Diagnosis_Date__c</fullName>
    <label>Low Sperm Count Diagnosis Date</label>
    <type>Date</type>
</CustomField>