force-app/main/default/objects/Camp_Lejeune__c/fields/Lung_Cancer_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Lung_Cancer_Diagnosis_Date__c</fullName>
    <label>Lung Cancer Diagnosis Date</label>
    <type>Date</type>
</CustomField>