force-app/main/default/objects/Camp_Lejeune__c/fields/Lupus_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Lupus_Diagnosis_Date__c</fullName>
    <label>Lupus Diagnosis Date</label>
    <type>Date</type>
</CustomField>