force-app/main/default/objects/Camp_Lejeune__c/fields/Medical_Records_Available__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Available__c</fullName>
    <inlineHelpText>Does PC have a copy of medical records in their possession and are they willing to provide them to the attorneys?</inlineHelpText>
    <label>Medical Records Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>