force-app/main/default/objects/Camp_Lejeune__c/fields/Medication_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Medication_Consumed__c</fullName>
    <inlineHelpText>Did you consume any medication related to your diagnosis?</inlineHelpText>
    <label>Medication Consumed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>