force-app/main/default/objects/Camp_Lejeune__c/fields/Military_Details__c.field-meta.xml
<CustomField>
    <fullName>Military_Details__c</fullName>
    <label>Military Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>